fix: app wrapperr styles and visibility for sidebar

--- a/src/app/styles.module.scss
+++ b/src/app/styles.module.scss
@@ -1,11 +1,11 @@
 .wrapper {
-  display: grid;
+  display: flex;
   height: 100vh;
-  grid-template-columns: 320px minmax(0, 1fr);
   overflow-y: hidden;
   padding: 20px;
 }
 
 .pageWrapper {
+  flex-grow: 1;
   padding-left: 20px;
 }
